--- a/home.html
+++ b/home.html
@@ -177,7 +177,7 @@
              <li> Sharmeen will be doing "$50 facetime shoots" and "100% of the proceeds will go to the bail funds."</li>
              <li> Zoë will "give away tiny [chocolate] boxes away to the first 50 people who donate to any organizations."</li>
              <li> "Ways You Can Help" has a larger index of resources so check it out!</li>
-            <li> Thank you, and Be The Change</li>
+            <li> Thank you, and Be The Change.</li>
         </ul>
   		
     </body>
