--- a/home.html
+++ b/home.html
@@ -173,7 +173,7 @@
             Notes
         </h4>
         <ul>
-            <li> Change.org allows for 1-Click Sign's after you sign the first petition.</li>
+            <li> Change.org allows for 1-Click Sign's after you sign the first petition. So you can sign 10+ petitions in less than a minute.</li>
              <li> Sharmeen will be doing "$50 facetime shoots" and "100% of the proceeds will go to the bail funds."</li>
              <li> Zoë will "give away tiny [chocolate] boxes away to the first 50 people who donate to any organizations."</li>
              <li> "Ways You Can Help" has a larger index of resources so check it out!</li>
