--- a/home.html
+++ b/home.html
@@ -139,7 +139,7 @@
             </tr>
 
              <tr>
-               <td><a href="https://bailfunds.github.io/">Bail Funds Per State</a>
+               <td><a href="https://secure.actblue.com/donate/bail_funds_george_floyd">70+ Joint Bail Funds</a>
                 </td>
 
                 
